<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    tools:context=".view.user.RegisterData">

    <TextView
        android:id="@+id/txt_warning_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_user_name"
        android:gravity="left"
        android:text="nfknsdfkj"/>

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20dp"
        android:hint="@string/hint_user_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/txt_birthday"
        android:layout_below="@id/txt_warning_user_name"
        android:text="@string/message_birthday"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_below="@+id/txt_birthday"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <Spinner
            android:id="@+id/spn_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <Spinner
            android:id="@+id/spn_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <Spinner
            android:id="@+id/spn_year"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_warning_birthday"
        android:layout_below="@id/ll_date"
        android:text="fksdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_cpf"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/message_cpf"
        android:layout_below="@+id/txt_warning_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:id="@+id/txt_warning_cpf"
        android:layout_below="@id/edt_cpf"
        android:text="fksdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_rg"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/message_rg"
        android:layout_below="@+id/txt_warning_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:id="@+id/txt_warning_rg"
        android:layout_below="@id/edt_rg"
        android:text="fksdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
