<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.RegisterActivity">
    <LinearLayout
        android:id="@+id/first"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="160dp">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/second"
        android:layout_below="@+id/first"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </LinearLayout>
    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@+id/second"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txt_warning_email"
        android:layout_below="@+id/edt_email"
        android:layout_width="wrap_content"
        android:textSize="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorWarning"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_password"
        android:layout_below="@+id/txt_warning_email"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/edt_password_confirmation"
        android:layout_below="@+id/edt_password"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/txt_warning_password"
        android:layout_below="@+id/edt_password_confirmation"
        android:textSize="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWarning"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/lnButton"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_btn_back"
            android:layout_width="match_parent"
            android:paddingLeft="30dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="30dp"
            android:text="@string/back"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_btn_next"
            android:text="@string/next"
            android:paddingRight="30dp"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>
